--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=desafio-imagem-spring
+# Configurações do banco de dados H2 (usado apenas para o perfil não local)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+# Configurações para salvar imagens no banco de dados
+image.storage.db.enabled=true
